--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="accordion.css">
-    <link rel="stylesheet" href="slideshow.css">
-    <link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/accordion.css">
+    <link rel="stylesheet" href="css/slideshow.css">
+    <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=B612">
 </head>
 <body>
